@@ -1,5 +1,12 @@
 2002-02-25  Anders Carlsson  <andersca@gnu.org>
 
+	* libnautilus-private/nautilus-drag-window.c:
+	(wm_protocols_filter), (nautilus_drag_window_realize),
+	(nautilus_drag_window_register):
+	Get the don't-raise-on-drag feature working again.
+	
+2002-02-25  Anders Carlsson  <andersca@gnu.org>
+
 	* components/tree/nautilus-tree-model.c:
 	(nautilus_tree_model_get_column_type),
 	(nautilus_tree_model_get_value):
